[tool.poetry]
name = "python-challenge"
version = "0.1.0"
description = "My solutions to the Python Challenge riddles"
authors = ["Ela Bogucka <ebogucka@users.noreply.github.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
flake8 = "^3.7"
black = {version = "^18.3-alpha.0", allows-prereleases = true}

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
